Bug 40234 - Weborder - scroll bar is not fully visible for product modifiers

--- a/skins/weborder/css/myorder.css
+++ b/skins/weborder/css/myorder.css
@@ -19,17 +19,19 @@
 #modifiers_popup .modifiers_table_scroll {
     overflow-y: auto;
     position: relative;
-    margin: 5px 13px 5px 8px;
-    padding-left: 5px;
+    margin: 5px 0 5px 8px;
+    padding: 0 14px;
     height: 100%;
 }
 
 #modifiers_popup .modifiers_table .arrow_top {
     top:5px;
+    right: 20px;
 }
 
 #modifiers_popup .modifiers_table .arrow_bottom {
     bottom:5px;
+    right: 20px;
 }
 
 .ui-invisible {
